<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndrOSC</string>
    <string name="mnu_new">NEW</string>
    <string name="mnu_open">OPEN</string>
    <string name="mnu_edit">EDIT</string>
    <string name="mnu_save">SAVE</string>
    <string name="mnu_share">SHARE</string>
    <string name="mnu_network">NETWORK</string>
    <string name="mnu_title">AndrOSC</string>
    <string name="osc_toggle_menu">Toggle Menu Bar</string>
    <string name="dlgSave_save_file_name">Save File Name</string>
    <string name="dlgSave_set_file_name">Set File Name</string>
    <string name="frg_network_settings">Network Settings</string>
    <string name="action_save">SAVE</string>
    <string name="action_cancel">CANCEL</string>
    <string name="action_overwrite">OVERWRITE</string>
    <string name="action_close">CLOSE</string>
    <string name="osc_hide_settings">Hide Settings</string>
    <string name="osc_delete_control">Delete Control</string>
    <string name="osc_duplicate_control">Duplicate Control</string>
    <string name="control_button">OSCButton</string>
    <string name="control_toggle">OSCToggle</string>
    <string name="control_hslider">HSlider</string>
    <string name="control_vslider">VSlider</string>
    <string name="control_pad">XYPad</string>
    <string-array name="menu_array">
        <item>NEW</item>
        <item>OPEN</item>
        <item>NETWORK</item>
    </string-array>
</resources>