<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loOSCFragment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/gray_transperant"
    >
    <!-- android:background="@drawable/osc_edit_bg" -->

    <com.ahmetkizilay.controls.androsc.views.OSCViewGroup
        android:id="@+id/wgOSCPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/btnToggleMenu"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:maxHeight="16dp"
        android:maxWidth="16dp"
        android:layout_gravity="center|start"
        android:layout_marginLeft="-4dp"
        android:contentDescription="@string/osc_toggle_menu"
        android:src="@drawable/ic_drawer" />

    <ImageButton
        android:id="@+id/btnAddNew"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="50dp"
        android:contentDescription="@string/osc_toggle_menu"
        android:src="@drawable/actionadd" />

    <ImageButton
        android:id="@+id/btnDuplicateControl"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|start"
        android:layout_marginLeft="50dp"
        android:contentDescription="@string/osc_duplicate_control"
        android:src="@drawable/actioncopy" />

    <ImageButton
        android:id="@+id/btnShowSettings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|start"
        android:layout_marginLeft="100dp"
        android:contentDescription="Show Settings"
        android:src="@drawable/actionsettings" />

    <ImageButton
        android:id="@+id/btnDeleteControl"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|start"
        android:contentDescription="@string/osc_delete_control"
        android:src="@drawable/actiondelete" />

    <ImageButton
        android:id="@+id/btnSaveTemplate"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="100dp"
        android:contentDescription="@string/osc_delete_control"
        android:src="@drawable/actionsave" />

    <ImageButton
        android:id="@+id/btnToggleEdit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="right|bottom"
        android:contentDescription="@string/osc_toggle_menu"
        android:src="@drawable/actionunlock" />

    <com.ahmetkizilay.controls.androsc.views.settings.OSCSettingsViewGroup
        android:layout_width="400dp"
        android:layout_height="fill_parent"
        android:layout_gravity="top|right"
        android:id="@+id/vgSettings" android:visibility="invisible"/>

    <com.ahmetkizilay.controls.androsc.views.HSLColorPicker
        android:id="@+id/layColorPicker"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@color/opaque_black"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_gravity="center" app:closeOnSelect="true"/>
</FrameLayout>